タイトルを文字列リソースに変更

--- a/Visual Studio/2D RPG Negiramen/Resources/Languages/AppResources.en-US.resx
+++ b/Visual Studio/2D RPG Negiramen/Resources/Languages/AppResources.en-US.resx
@@ -219,4 +219,7 @@
   <data name="HowToRememberControlCode" xml:space="preserve">
     <value>Sing code</value>
   </data>
+  <data name="_2dRpgNegiramen" xml:space="preserve">
+    <value>2D RPG Green onion ramen</value>
+  </data>
 </root>
