--- a/Visual Studio/2D RPG Negiramen/Resources/Languages/AppResources.en-US.resx
+++ b/Visual Studio/2D RPG Negiramen/Resources/Languages/AppResources.en-US.resx
@@ -231,4 +231,7 @@
   <data name="Intersecting" xml:space="preserve">
     <value>Intersecting</value>
   </data>
+  <data name="EditTileset" xml:space="preserve">
+    <value>Edit Tileset</value>
+  </data>
 </root>
