--- a/Visual Studio/2D RPG Negiramen/Resources/Languages/AppResources.en-US.resx
+++ b/Visual Studio/2D RPG Negiramen/Resources/Languages/AppResources.en-US.resx
@@ -213,8 +213,8 @@
   <data name="ControlCode" xml:space="preserve">
     <value>Control Code</value>
   </data>
-  <data name="TileName" xml:space="preserve">
-    <value>Tile name</value>
+  <data name="TileTitle" xml:space="preserve">
+    <value>Tile title</value>
   </data>
   <data name="HowToRememberControlCode" xml:space="preserve">
     <value>Sing code</value>
