--- a/Visual Studio/2D RPG Negiramen/Resources/Languages/AppResources.en-US.resx
+++ b/Visual Studio/2D RPG Negiramen/Resources/Languages/AppResources.en-US.resx
@@ -234,8 +234,8 @@
   <data name="TilesetList" xml:space="preserve">
     <value>Tileset List</value>
   </data>
-  <data name="ConfigurationPageWorkspaceFolderDescription" xml:space="preserve">
-    <value>The path to the Workspace folder included in the 2D RPG Negiramen you downloaded to your local PC</value>
+  <data name="ConfigurationPageStarterKitFolderDescription" xml:space="preserve">
+    <value>The path to the Starter Kit folder included in the 2D RPG Negiramen you downloaded to your local PC</value>
   </data>
   <data name="ConfigurationPageUnityProjectDescription" xml:space="preserve">
     <value>Please create a Unity project with a 2D template and then configure the following:</value>
