--- a/Visual Studio/2D RPG Negiramen/Resources/Languages/AppResources.en-US.resx
+++ b/Visual Studio/2D RPG Negiramen/Resources/Languages/AppResources.en-US.resx
@@ -261,10 +261,10 @@
   <data name="ConfigurationPageUnityAssetsFolderDescription" xml:space="preserve">
     <value>Path to the Assets folder in your Unity project</value>
   </data>
-  <data name="LoginPage2" xml:space="preserve">
+  <data name="Login2Page" xml:space="preserve">
     <value>Login (2)</value>
   </data>
-  <data name="LoginPage1" xml:space="preserve">
+  <data name="Login1Page" xml:space="preserve">
     <value>Login (1)</value>
   </data>
 </root>
