--- a/Visual Studio/2D RPG Negiramen/Resources/Languages/AppResources.en-US.resx
+++ b/Visual Studio/2D RPG Negiramen/Resources/Languages/AppResources.en-US.resx
@@ -285,4 +285,7 @@
   <data name="Continue" xml:space="preserve">
     <value>From the continuation</value>
   </data>
+  <data name="CreateANewProject" xml:space="preserve">
+    <value>Create a new project</value>
+  </data>
 </root>
