--- a/Visual Studio/2D RPG Negiramen/Resources/Languages/AppResources.resx
+++ b/Visual Studio/2D RPG Negiramen/Resources/Languages/AppResources.resx
@@ -294,4 +294,7 @@
   <data name="Continue" xml:space="preserve">
     <value>続きから</value>
   </data>
+  <data name="CreateANewProject" xml:space="preserve">
+    <value>新しく作る</value>
+  </data>
 </root>
