--- a/Visual Studio/2D RPG Negiramen/Resources/Languages/AppResources.resx
+++ b/Visual Studio/2D RPG Negiramen/Resources/Languages/AppResources.resx
@@ -324,4 +324,13 @@
   <data name="Redo" xml:space="preserve">
     <value>リドゥ</value>
   </data>
+  <data name="Restore" xml:space="preserve">
+    <value>復元</value>
+  </data>
+  <data name="RegisterThatThisIsForOneTile" xml:space="preserve">
+    <value>これがタイル１つ分だと登録します</value>
+  </data>
+  <data name="RestoreFromMemoryOfRemainingTiles" xml:space="preserve">
+    <value>残っているタイルの記憶から復元します</value>
+  </data>
 </root>
