--- a/Visual Studio/2D RPG Negiramen/Resources/Languages/AppResources.en-US.resx
+++ b/Visual Studio/2D RPG Negiramen/Resources/Languages/AppResources.en-US.resx
@@ -253,7 +253,7 @@
     <value>Open</value>
   </data>
   <data name="ConfigurationPageUnityProjectDescription" xml:space="preserve">
-    <value>Please create a Unity project with a 2D template and then configure the following</value>
+    <value>Please create a Unity project with a 2D template and then configure the following.</value>
   </data>
   <data name="ConfigurationPageUnityAssetsFolderDescription" xml:space="preserve">
     <value>Path to the Assets folder in your Unity project</value>
