--- a/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
+++ b/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
@@ -7,6 +7,8 @@
 ![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
 「　失敗しただけ、要らん記事が量産されてるのよ」  
 
+# 命令を出す者
+
 ![202309_program_16-2211--Commander.png](https://crieit.now.sh/upload_images/88a798c82d587b724f57d7bacf97a5fc6505aa40092fb.png)  
 Commander  
 
@@ -18,12 +20,22 @@ Commander
 ![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
 「　👆　絵にすると　こんな感じだな」  
 
+# 階級は全順序
+
 ![202309_program_16-2217--Class.png](https://crieit.now.sh/upload_images/47f14672383052dca90ed3b76296560f6505ab38ad8d2.png)  
 
 ![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
 「　👆　で、コマンダーには　階級というものがあるぜ。  
 階級が上のコマンダーは、階級が下のコマンダーに　コマンドを出せるぜ。  
 階級が下のコマンダーは、階級が上のコマンダーには、コマンドを出せないぜ」  
+
+![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　序列があんの？」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　上と、下が　ひっくり返ることはないぜ。全順序」  
+
+# 下のコマンダーから上のコマンダーへの向きは、報告を上げるだけ
 
 ![202309_program_16-2221--Report.png](https://crieit.now.sh/upload_images/139289ae093825a10defb6ab742ba6226505aca2b8e5c.png)  
 
@@ -51,3 +63,45 @@ Aという命令を受け取ったらBという報告を返すコマンダーが
 ![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
 「　階級が下のコマンダーが　もっと働くというのが　おかしいんだぜ。  
 階級が下のコマンダーは、階級が下なりの、それなりのことしか　しないぜ」  
+
+# 部下の名前は知ってるが、上長は誰か知らないかのように作れ
+
+![202309_program_16-2343--cellAutomaton.png](https://crieit.now.sh/upload_images/6bb0f94d1749b727c95e991972ffd4a66505c048af497.png)  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　👆　プログラムでは、  
+部下の名前は知ってるが、上長は誰か知らないかのように作れだぜ」  
+
+![kifuwarabe-futsu.png](https://crieit.now.sh/upload_images/beaf94b260ae2602ca8cf7f5bbc769c261daf8686dbda.png)  
+「　そんな　マヌケ　な部下でいいのかだぜ？」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　マヌケなのがいいんだぜ」  
+
+![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　上長が　すり替わっても　仕事はできますもんね」
+
+# 末端の部下に、組織全体をひっかき回すぐらい仕事してほしいケースがよくある
+
+![202309_program_17-0006--undoRedo.png](https://crieit.now.sh/upload_images/c50d3878ff09e9549b5572a2d8a093c76505c4eb40f5c.png)  
+
+![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　👆　でも　プログラミングやってると、  
+一番末端の部下に　組織全体をひっかき回すくらい仕事してほしいケースが　よくあるのよ」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　設定ファイル　書きかえるボタンとかな。  
+上長の言うことが変わるような権力を　設定画面が持ってたりするな」  
+
+![kifuwarabe-futsu.png](https://crieit.now.sh/upload_images/beaf94b260ae2602ca8cf7f5bbc769c261daf8686dbda.png)  
+「　設定画面は　上の方の　上長にしないといけないよな」  
+
+![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　でも　みんな設定したいのだから、末端にいてほしいのよ」  
+
+![kifuwarabe-futsu.png](https://crieit.now.sh/upload_images/beaf94b260ae2602ca8cf7f5bbc769c261daf8686dbda.png)  
+「　インフィニティ・ループが始まってしまう」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　じゃあ仮に　リバース・ワーカー（Reverse worker；逆転する作業員）とでも造語しよう。  
+リバース・ワーカーをいないようにするのが　優れた階層だぜ」  
