--- a/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
+++ b/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
@@ -105,3 +105,21 @@ Aという命令を受け取ったらBという報告を返すコマンダーが
 ![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
 「　じゃあ仮に　リバース・ワーカー（Reverse worker；逆転する作業員）とでも造語しよう。  
 リバース・ワーカーをいないようにするのが　優れた階層だぜ」  
+
+![202309_program_17-0030--reverseWorker.png](https://crieit.now.sh/upload_images/c61561970613266df2205ca9119bee6f6505caa077bfb.png)  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　👆　リバース・ワーカーは　上位に置けだぜ」  
+
+## 判定ラインは？
+
+![kifuwarabe-futsu.png](https://crieit.now.sh/upload_images/beaf94b260ae2602ca8cf7f5bbc769c261daf8686dbda.png)  
+「　どいつが　リバース・ワーカーで、  
+どいつは　部下にコマンドを送っているつもりが、リバース・ワーカーに  
+レポートを上げることになった末端のコマンダーなんだぜ？」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　考え方が逆だぜ。  
+末端作業員の　ボトム　から確定していって、  
+最後の方まで残る　余り　のようなやつが　リバース・ワーカーだぜ。  
+その　リバース・ワーカー　が、ボトムにいたら　プログラムは崩壊するんだぜ」  
