--- a/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
+++ b/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
@@ -122,4 +122,37 @@ Aという命令を受け取ったらBという報告を返すコマンダーが
 「　考え方が逆だぜ。  
 末端作業員の　ボトム　から確定していって、  
 最後の方まで残る　余り　のようなやつが　リバース・ワーカーだぜ。  
-その　リバース・ワーカー　が、ボトムにいたら　プログラムは崩壊するんだぜ」  
+その　リバース・ワーカー　が、ボトムにいたら　プログラムは崩壊するんだぜ」
+
+# データとプログラム
+
+![202309_program_17-1034--object.png](https://crieit.now.sh/upload_images/ff8fdb62b67fed1e13f8cb2f699410a8650658b27d3ac.png)  
+
+![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　👆　コマンダーって、自分の裁量で扱えるデータと、そのデータをどう扱うかのプログラムを持ってると思うけど……」  
+
+![202309_program_17-1040--objectHierarchy.png](https://crieit.now.sh/upload_images/94df1e80537c18ddff094c59a7dc57cf6506597be2fcf.png)  
+
+![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　👆　そのデータと　プログラムも　階層構造になってると考えると」   
+
+![202309_program_17-1049--size.png](https://crieit.now.sh/upload_images/843ff36a7308d986443f1babd3a0fe6265065c138e916.png)  
+
+![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　👆　上長になるほど　バカデカくなって、　部下は　ちょっとのことしか　できなくない？」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　それが理想だぜ」  
+
+![kifuwarabe-futsu.png](https://crieit.now.sh/upload_images/beaf94b260ae2602ca8cf7f5bbc769c261daf8686dbda.png)  
+「　優秀な部下が　勝手に動いてくれないと　忙しい上長は　楽できないんじゃないか？  
+めんどうな仕事は　部下に押し付けるのが　組織なんじゃないか？」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　デベロップメントでは　逆だぜ」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　コントロール可能で簡単なことしかしない部下と、コントロールする上長にしろだぜ」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　造語すると、ビッグ・ボスと　スモール・メンバーだぜ」  
