--- a/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
+++ b/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
@@ -155,4 +155,36 @@ Aという命令を受け取ったらBという報告を返すコマンダーが
 「　コントロール可能で簡単なことしかしない部下と、コントロールする上長にしろだぜ」  
 
 ![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
-「　造語すると、ビッグ・ボスと　スモール・メンバーだぜ」  
+「　造語すると、ビッグ・ボスと　スモール・メンバーだぜ」
+
+# 上長が持ってるデータをほしい部下
+
+![202309_program_17-1128--bossData.png](https://crieit.now.sh/upload_images/380521195196450ad5a18109b7daf4a8650664b13c371.png)  
+
+![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　👆　部下が仕事するには、上長が持ってるデータが欲しいときがあるでしょ」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　よくある」  
+
+![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　命令だけじゃなくて、データも　よこしなさいよ」  
+
+![kifuwarabe-futsu.png](https://crieit.now.sh/upload_images/beaf94b260ae2602ca8cf7f5bbc769c261daf8686dbda.png)  
+「　リバース・ワーカーになるのでは？」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　上司の持ってるデータを　部下に渡すと　部下が　でかくなるぜ。  
+上司がデータを部下に渡すのが　プログラム崩壊の始まりだぜ」  
+
+![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　部下の仕事が進まないんだけど」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　部下が、 **上司が持っているデータが無いと進められない仕事**　を持っていることが　おかしいんだぜ」  
+
+![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　じゃあ、部下にやってほしい仕事の多くを　上司がやることにならない？」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　プログラミング　の中の価値観では、そうなるぜ」  
