--- a/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
+++ b/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
@@ -175,7 +175,7 @@ Aという命令を受け取ったらBという報告を返すコマンダーが
 
 ![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
 「　上司の持ってるデータを　部下に渡すと　部下が　でかくなるぜ。  
-上司がデータを部下に渡すのが　プログラム崩壊の始まりだぜ」  
+上司がデータを部下に渡すのが　階層の序列崩壊の始まりだぜ」  
 
 ![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
 「　部下の仕事が進まないんだけど」  
@@ -188,3 +188,10 @@ Aという命令を受け取ったらBという報告を返すコマンダーが
 
 ![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
 「　プログラミング　の中の価値観では、そうなるぜ」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　リバース・データ（Reverse Data）とでも造語しよう」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　競技プログラミングのようなものは除くが、  
+大きな組織を作るときは、リバース・データは　しないことが重要だぜ」  
