--- a/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
+++ b/docs/crieite/矛盾のない命令系統を備える階層の作り方（＾～＾）.md
@@ -194,4 +194,121 @@ Aという命令を受け取ったらBという報告を返すコマンダーが
 
 ![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
 「　競技プログラミングのようなものは除くが、  
-大きな組織を作るときは、リバース・データは　しないことが重要だぜ」  
+大きな組織を作るときは、リバース・データは　しないことが重要だぜ」
+
+# 横のデータがほしい自分
+
+![202309_program_17-1726--sibling-o2o0.png](https://crieit.now.sh/upload_images/104050026c6e49cc32f2d4b66500766c6506b8c051435.png)  
+
+![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　👆　上司のデータは要らないけど、同僚のデータがほしい場合は　どうすんの？」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　厳密には、横だと思ってるやつが　本当に横かは分からない。  
+自分のボスが誰かさえ　自分は知らないからな」  
+
+![kifuwarabe-futsu.png](https://crieit.now.sh/upload_images/beaf94b260ae2602ca8cf7f5bbc769c261daf8686dbda.png)  
+「　悪の組織みたいだな。密輸でもしてんのか」  
+
+![202309_program_17-1740--network.png](https://crieit.now.sh/upload_images/e975bf61dc9e0779ad5842b2b115a1b66506bbfbe9119.png)  
+
+![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　👆　とにかく　他の人のデータがほしいとき　どうすんの？」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　部下以外から　データを引っ張り出してくると、リバース・ワーカーのできあがりだぜ」  
+
+![202309_program_17-1757--common.png](https://crieit.now.sh/upload_images/ad5354eda46eac4c062e39061aed1fdf6506c33cdb82c.png)  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　👆　仕方がないので、解決方法としては、まるで　共通の部下がいるような　下位の部下を置いて、  
+隣と共有したいようなものは　下位の部下に置き、見知らぬ上長同士で　共有することだぜ」  
+
+![kifuwarabe-futsu.png](https://crieit.now.sh/upload_images/beaf94b260ae2602ca8cf7f5bbc769c261daf8686dbda.png)  
+「　ツリー構造が　破れるな」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　全順序の方が重要だぜ」  
+
+# ソース・フォルダーの使い方
+
+```plaintext
+　　📂 Ramen Project
+　　└── 📂 Models
+　　　　└── 📂 Book
+　　　　　　└── 📄 MemoModel
+```
+
+![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　👆　ヒエラルキーを作ると、フォルダー階層が深くなるのよねえ」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　ファイルパスは　文字数上限　２５６文字の壁がある。  
+　　フォルダー階層を作る方法は　いずれ　行き詰る」  
+  
+  ![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　じゃあ　ソースはどう配置したらいいの？」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　例えば、悪い方法から見てみよう」  
+
+## 悪い方法：テレスドン
+
+![202309_program_17-1654--SiteMap.png](https://crieit.now.sh/upload_images/2eb48bb5c5bdecc7290d7b85cab718bf6506b2343b24b.png)  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　👆　例えば　上図のような画面遷移があるとしよう」  
+
+悪い例：  
+
+```plaintext
+　　📂 SiteMap
+　　├── 📄 Portal
+　　└── 📂 Portal
+　　　　├── 📄 Introduction
+　　　　├── 📄 Downloads
+　　　　├── 📂 Downloads
+　　　　│　 ├── 📄 Windows
+　　　　│　 └── 📄 Linux
+　　　　└── 📄 FAQ
+```
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　👆　例えば　サイトマップの階層を　そのままフォルダーを使って表すのは　悪い例だぜ。  
+わたしは　こんなことをする人を　**テレスドン**　と呼んでいる」  
+
+![kifuwarabe-futsu.png](https://crieit.now.sh/upload_images/beaf94b260ae2602ca8cf7f5bbc769c261daf8686dbda.png)  
+「　テレスドンには　風評被害だぜ」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　ファイルパスの　２５６文字制限は　わりとよく　ぶつかって  
+深い階層のフォルダーで　圧縮ファイルを解凍したとき、ファイルを破損したりするぜ」  
+
+  ![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　じゃあ　どうすんのが　ベスト・プラクティスなの？」  
+
+![202309_program_17-1708--Typing.png](https://crieit.now.sh/upload_images/03c5cf085ea8b5b1def14eed9f2f5d436506b471f28f0.png)  
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　👆　ひとまず、流し込むコンテンツが違うだけで　同じテンプレートでいけるだろ、という画面は  
+１つにまとめるぜ。  
+わたしは　これを　**タイピング**　と呼んでいる」  
+
+良い例：  
+
+```plaintext
+　　📂 Pages
+　　├── 📄 ByOS
+　　├── 📄 Downloads
+　　├── 📄 FAQ
+　　├── 📄 Introduction
+　　└── 📄 Portal
+```
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　👆　あとは `Pages` フォルダ―を作って、その下に　ABC順で　フラットに並べるだけだぜ」  
+
+  ![ohkina-hiyoko-futsu2.png](https://crieit.now.sh/upload_images/96fb09724c3ce40ee0861a0fd1da563d61daf8a09d9bc.png)  
+「　階層構造が　分かんなくない？」  
+
+![ramen-tabero-futsu2.png](https://crieit.now.sh/upload_images/d27ea8dcfad541918d9094b9aed83e7d61daf8532bbbe.png)  
+「　そんなものは　設計書か何かに書いておけだぜ」  
